# imitation_learning

./: CMakeLists.txt  package.xml
3dof/: base.dae  base.stl  base2.dae  wheel.dae  wheel.stl
Gains_computation/: gains.m
WIP_3dof_description/urdf/: 3dof.urdf  3dof.xacro  3dof_1.xacro  3dof_original.xacro  Krang.urdf  Krang.xacro  edumip.xacro
launch/: 3dof-joints.launch  3dof.launch  3dof_autorally_world.launch  3dof_xacro.launch
rviz/: edumip_my_robot.rviz
src/: robot_publisher.py
